# ddb_ipc

./: .gitignore  .gitmodules  Makefile  README.md  meson.build
include/: argument.hpp  commands.hpp  ddb_ipc.hpp  fmt_optional.hpp  ipc_server.hpp
src/: argument.cpp  argument.hpp  commands.cpp  commands.hpp  ddb_ipc.cpp  ddb_ipc.hpp  defs.hpp  ipc_server.cpp  message.cpp  message.hpp  properties.cpp  properties.hpp  response.cpp  response.hpp  test.cpp
test/: ddb_mock.cpp  ddb_mock.hpp  test-cover.json  test-cover.sh  test-playlist-items.json  test-playlist.json  test-seek.json  test-title.json  test-volume.json  test.cpp  test.sh
